--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.mannschaften.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.mannschaften.yml
@@ -4,10 +4,8 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_league
+    - field.storage.node.field_player_image
     - field.storage.node.field_results_standings
-    - field.storage.user.field_user_first_name
-    - field.storage.user.field_user_last_name
-    - field.storage.user.user_picture
     - image.style.portrait
     - node.type.team
     - system.menu.main
@@ -181,15 +179,15 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_user_last_name:
-          id: field_user_last_name
-          table: user__field_user_last_name
-          field: field_user_last_name
+        title_1:
+          id: title_1
+          table: node_field_data
+          field: title
           relationship: field_team_leader
           group_type: group
           admin_label: ''
           label: ''
-          exclude: true
+          exclude: false
           alter:
             alter_text: false
             text: ''
@@ -232,7 +230,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: false
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -243,74 +241,13 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: node
+          entity_field: title
           plugin_id: field
-        field_user_first_name:
-          id: field_user_first_name
-          table: user__field_user_first_name
-          field: field_user_first_name
-          relationship: field_team_leader
-          group_type: group
-          admin_label: ''
-          label: Mannschaftsführer
-          exclude: false
-          alter:
-            alter_text: true
-            text: '{{ field_user_first_name }} {{ field_user_last_name }}'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        user_picture:
-          id: user_picture
-          table: user__user_picture
-          field: user_picture
+        field_player_image:
+          id: field_player_image
+          table: node__field_player_image
+          field: field_player_image
           relationship: field_team_leader
           group_type: group
           admin_label: ''
@@ -359,7 +296,7 @@ display:
           type: image
           settings:
             image_style: portrait
-            image_link: ''
+            image_link: content
           group_column: ''
           group_columns: {  }
           group_rows: true
@@ -485,7 +422,7 @@ display:
           field: field_team_leader
           relationship: none
           group_type: group
-          admin_label: 'field_team_leader: User'
+          admin_label: 'field_team_leader: Referenzierter Spieler'
           required: false
           plugin_id: standard
       arguments: {  }
@@ -499,10 +436,8 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_league'
+        - 'config:field.storage.node.field_player_image'
         - 'config:field.storage.node.field_results_standings'
-        - 'config:field.storage.user.field_user_first_name'
-        - 'config:field.storage.user.field_user_last_name'
-        - 'config:field.storage.user.user_picture'
   page_1:
     display_plugin: page
     id: page_1
@@ -529,7 +464,5 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_league'
+        - 'config:field.storage.node.field_player_image'
         - 'config:field.storage.node.field_results_standings'
-        - 'config:field.storage.user.field_user_first_name'
-        - 'config:field.storage.user.field_user_last_name'
-        - 'config:field.storage.user.user_picture'
