--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.team.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.team.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.team.field_league
     - field.field.node.team.field_results_standings
     - field.field.node.team.field_team_description
+    - field.field.node.team.field_team_leader
     - node.type.team
   module:
     - link
@@ -43,6 +44,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea_with_summary
+  field_team_leader:
+    weight: 37
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
   langcode:
     type: language_select
     weight: 2
