--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.team.field_league
     - field.field.node.team.field_results_standings
     - field.field.node.team.field_team_description
+    - field.field.node.team.field_team_leader
     - node.type.team
   module:
     - link
@@ -40,6 +41,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+  field_team_leader:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   links:
     weight: 4
     settings: {  }
