Schachverein statt Schachclub in Slogan

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.front.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.front.yml
@@ -9,4 +9,4 @@ label: 'Front page'
 tags:
   canonical_url: '[site:url]'
   shortlink: '[site:url]'
-  title: 'Schachclub Hannover - [site:name]'
+  title: 'Schachklub Hannover - [site:name]'
