--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.views_block__content_recent_block_1.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.views_block__content_recent_block_1.yml
@@ -1,6 +1,6 @@
 uuid: fc161574-e22b-4382-bac6-46ba6119de42
 langcode: de
-status: true
+status: false
 dependencies:
   config:
     - views.view.content_recent
