--- a/modules/contrib/linkit/linkit.info.yml
+++ b/modules/contrib/linkit/linkit.info.yml
@@ -7,8 +7,8 @@ configure: entity.linkit_profile.collection
 test_dependencies:
   - imce
 
-# Information added by Drupal.org packaging script on 2016-09-17
-version: '8.x-5.0-beta3'
+# Information added by Drupal.org packaging script on 2017-02-28
+version: '8.x-5.0-beta4+2-dev'
 core: '8.x'
 project: 'linkit'
-datestamp: 1474147146
+datestamp: 1488320892
