--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.player.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.player.default.yml
@@ -3,22 +3,39 @@ langcode: de
 status: true
 dependencies:
   config:
+    - field.field.node.player.body
+    - field.field.node.player.field_dwz
     - field.field.node.player.field_player_image
     - image.style.thumbnail
     - node.type.player
   module:
     - image
     - path
+    - text
 id: node.player.default
 targetEntityType: node
 bundle: player
 mode: default
 content:
+  body:
+    weight: 39
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea_with_summary
   created:
     type: datetime_timestamp
     weight: 10
     settings: {  }
     third_party_settings: {  }
+  field_dwz:
+    weight: 38
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
   field_player_image:
     weight: 37
     settings:
