--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.player.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.player.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.player.body
     - field.field.node.player.field_dwz
     - field.field.node.player.field_player_image
+    - field.field.node.player.field_player_team
     - image.style.thumbnail
     - node.type.player
   module:
@@ -18,7 +19,7 @@ bundle: player
 mode: default
 content:
   body:
-    weight: 39
+    weight: 2
     settings:
       rows: 9
       summary_rows: 3
@@ -27,61 +28,69 @@ content:
     type: text_textarea_with_summary
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 7
     settings: {  }
     third_party_settings: {  }
   field_dwz:
-    weight: 38
+    weight: 3
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
   field_player_image:
-    weight: 37
+    weight: 1
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+  field_player_team:
+    weight: 4
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
   langcode:
     type: language_select
-    weight: 2
+    weight: 5
     settings: {  }
     third_party_settings: {  }
   node_class:
     type: string_textfield
-    weight: 35
+    weight: 11
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 10
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 8
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 9
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
