--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.team.field_team_players.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.team.field_team_players.yml
@@ -1,17 +1,17 @@
-uuid: 1ed7374e-9539-4242-90f4-05d5bb8f8f97
+uuid: 68d68c76-6adc-4245-8c9b-0db7ebbae838
 langcode: de
 status: true
 dependencies:
   config:
-    - field.storage.node.field_player_team
+    - field.storage.node.field_team_players
     - node.type.player
     - node.type.team
-id: node.player.field_player_team
-field_name: field_player_team
+id: node.team.field_team_players
+field_name: field_team_players
 entity_type: node
-bundle: player
-label: Mannschaft
-description: 'In welcher Mannschaft spielt der Spieler?'
+bundle: team
+label: Spieler
+description: 'Die Spieler dieser Mannschaft in der aktuellen Saison.'
 required: false
 translatable: false
 default_value: {  }
@@ -20,7 +20,7 @@ settings:
   handler: 'default:node'
   handler_settings:
     target_bundles:
-      team: team
+      player: player
     sort:
       field: title
       direction: ASC
