--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.storage.node.field_team_players.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.storage.node.field_team_players.yml
@@ -1,18 +1,18 @@
-uuid: 2ab27c2a-6327-4758-b357-3c61c24045ed
+uuid: 979fdc3a-3208-4b8c-a9a9-65ef19083a4c
 langcode: de
 status: true
 dependencies:
   module:
     - node
-id: node.field_player_team
-field_name: field_player_team
+id: node.field_team_players
+field_name: field_team_players
 entity_type: node
 type: entity_reference
 settings:
   target_type: node
 module: core
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
