--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.event.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.event.default.yml
@@ -7,6 +7,8 @@ dependencies:
     - field.field.node.event.field_ev_date
     - field.field.node.event.field_ev_end_time
     - field.field.node.event.field_ev_start_time
+    - field.field.node.event.field_event_location
+    - field.field.node.event.field_event_room
     - node.type.event
   module:
     - datetime
@@ -20,7 +22,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 1
     settings:
       rows: 9
       summary_rows: 3
@@ -28,16 +30,16 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 9
     settings: {  }
     third_party_settings: {  }
   field_ev_date:
-    weight: 32
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
   field_ev_end_time:
-    weight: 34
+    weight: 4
     settings:
       format: 'h:mm'
       default_placeholder: 1
@@ -45,45 +47,66 @@ content:
     third_party_settings: {  }
     type: hms_default
   field_ev_start_time:
-    weight: 33
+    weight: 3
     settings:
       format: 'h:mm'
       default_placeholder: 1
       placeholder: ''
     third_party_settings: {  }
     type: hms_default
+  field_event_location:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_event_room:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
   langcode:
     type: language_select
-    weight: 2
+    weight: 7
     settings: {  }
+    third_party_settings: {  }
+  node_class:
+    type: string_textfield
+    weight: 13
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 12
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 10
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 11
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
