--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.default.yml
@@ -51,6 +51,22 @@ third_party_settings:
         effect: none
         speed: fast
       label: Middle
+    group_kader:
+      children:
+        - kader_entity_view_1
+      parent_name: ''
+      weight: 2
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: group-kader
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Kader
 id: node.team.default
 targetEntityType: node
 bundle: team
@@ -80,15 +96,8 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
-  field_team_leader:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
   kader_entity_view_1:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
   referenced_player_entity_view_1:
@@ -96,6 +105,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_team_leader: true
   field_team_players: true
   langcode: true
   links: true
