--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.referenced_player.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.referenced_player.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_player_image
-    - image.style.portrait
+    - image.style.portrait_medium
     - node.type.player
   module:
     - eva
@@ -122,7 +122,7 @@ display:
           click_sort_column: target_id
           type: image
           settings:
-            image_style: portrait
+            image_style: portrait_medium
             image_link: content
           group_column: ''
           group_columns: {  }
