--- a/modules/contrib/eva/eva.info.yml
+++ b/modules/contrib/eva/eva.info.yml
@@ -6,8 +6,8 @@ dependencies:
   - views
 package: Views
 
-# Information added by Drupal.org packaging script on 2017-01-28
-version: '8.x-1.0'
+# Information added by Drupal.org packaging script on 2017-03-17
+version: '8.x-1.1-rc1+4-dev'
 core: '8.x'
 project: 'eva'
-datestamp: 1485616708
+datestamp: 1489714086
