--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.referenced_player.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.referenced_player.yml
@@ -82,7 +82,7 @@ display:
           exclude: false
           alter:
             alter_text: false
-            text: "<div class=\"image\">{{ field_player_image }}</div>\n<div class=\"title\"><span class=\"label\">Mannschaftsführer: </span>{{ title }}</span></div>"
+            text: ''
             make_link: false
             path: ''
             absolute: false
