Webform exportiert, noch Zusatzmodule wie Webform UI aktiviert

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.base_field_override.node.webform.promote.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.base_field_override.node.webform.promote.yml
@@ -1,19 +1,19 @@
-uuid: e3c0a21c-85c0-4587-afdf-8489624c97c3
+uuid: 2bca93f8-5e7f-464c-96d0-676200f50386
 langcode: de
 status: true
 dependencies:
   config:
-    - node.type.page
+    - node.type.webform
 _core:
-  default_config_hash: fPUEnm4T5zfZRr3ttDUqq7yCDd2uW3clWD-pvos4tlQ
-id: node.page.promote
+  default_config_hash: FvXJkxryo6J_0TQRlb5Z77Ge-sim5GHzCI1Ft3kZu-4
+id: node.webform.promote
 field_name: promote
 entity_type: node
-bundle: page
+bundle: webform
 label: 'Promoted to front page'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
