--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -60,6 +60,8 @@ module:
   user: 0
   views_ui: 0
   webform: 0
+  webform_node: 0
+  webform_ui: 0
   extlink: 1
   menu_link_content: 1
   pathauto: 1
