--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -18,6 +18,9 @@ module:
   devel: 0
   dynamic_page_cache: 0
   editor: 0
+  embed: 0
+  entity_embed: 0
+  entityconnect: 0
   eva: 0
   field: 0
   field_collection: 0
@@ -30,6 +33,7 @@ module:
   history: 0
   hms_field: 0
   image: 0
+  inline_entity_form: 0
   kint: 0
   language: 0
   link: 0
