--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.kader_2.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.kader_2.yml
@@ -1,4 +1,4 @@
-uuid: 591e050f-8ae4-491e-bf91-fa359e91cfbc
+uuid: 452c3793-c7cf-4c22-9140-5551a9c95f75
 langcode: de
 status: true
 dependencies:
@@ -6,13 +6,13 @@ dependencies:
     - field.storage.node.field_dwz
     - field.storage.node.field_player_image
     - image.style.portrait_tiny
-    - node.type.player
+    - node.type.team
   module:
     - eva
     - image
     - node
     - user
-id: kader
+id: kader_2
 label: Kader
 module: views
 description: ''
@@ -66,16 +66,16 @@ display:
       row:
         type: fields
         options:
-          default_field_elements: true
           inline: {  }
           separator: ''
-          hide_empty: true
+          hide_empty: false
+          default_field_elements: true
       fields:
-        title_1:
-          id: title_1
+        title:
+          id: title
           table: node_field_data
           field: title
-          relationship: reverse__node__field_team_players
+          relationship: none
           group_type: group
           admin_label: ''
           label: ''
@@ -136,43 +136,58 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
-        title:
-          id: title
+        title_1:
+          id: title_1
           table: node_field_data
           field: title
-          entity_type: node
-          entity_field: title
-          label: ''
-          alter:
-            alter_text: false
-            make_link: false
-            absolute: false
-            trim: false
-            word_boundary: false
-            ellipsis: false
-            strip_tags: false
-            html: false
-          hide_empty: false
-          empty_zero: false
-          settings:
-            link_to_entity: true
-          plugin_id: field
-          relationship: none
+          relationship: field_team_players
           group_type: group
           admin_label: ''
+          label: ''
           exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
+          hide_empty: false
+          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
           type: string
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -183,11 +198,14 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: node
+          entity_field: title
+          plugin_id: field
         field_player_image:
           id: field_player_image
           table: node__field_player_image
           field: field_player_image
-          relationship: none
+          relationship: field_team_players
           group_type: group
           admin_label: ''
           label: ''
@@ -251,10 +269,10 @@ display:
           id: field_dwz
           table: node__field_dwz
           field: field_dwz
-          relationship: none
+          relationship: field_team_players
           group_type: group
           admin_label: ''
-          label: DWZ
+          label: ''
           exclude: false
           alter:
             alter_text: false
@@ -287,7 +305,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -328,7 +346,7 @@ display:
           table: node_field_data
           field: type
           value:
-            player: player
+            team: team
           entity_type: node
           entity_field: type
           plugin_id: bundle
@@ -358,27 +376,26 @@ display:
           admin_label: ''
           empty: false
           tokenize: true
-          content: '<h3>Kader der {{ title_1 }}</h3>'
+          content: '<h3>Kader der {{ title }}</h3>'
           plugin_id: text_custom
       footer: {  }
       empty: {  }
       relationships:
-        reverse__node__field_team_players:
-          id: reverse__node__field_team_players
-          table: node_field_data
-          field: reverse__node__field_team_players
+        field_team_players:
+          id: field_team_players
+          table: node__field_team_players
+          field: field_team_players
           relationship: none
           group_type: group
-          admin_label: field_team_players
+          admin_label: 'field_team_players: Content'
           required: false
-          entity_type: node
-          plugin_id: entity_reverse
+          plugin_id: standard
       arguments:
         nid:
           id: nid
           table: node_field_data
           field: nid
-          relationship: reverse__node__field_team_players
+          relationship: none
           group_type: group
           admin_label: ''
           default_action: 'not found'
