Redakteure dürfen Entity Connect benutzen

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
@@ -23,3 +23,5 @@ permissions:
   - 'access toolbar'
   - 'access user profiles'
   - 'bypass node access'
+  - 'entityconnect add button'
+  - 'entityconnect edit button'
