--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
@@ -6,4 +6,6 @@ id: redakteur
 label: Redakteur
 weight: 3
 is_admin: null
-permissions: {  }
+permissions:
+  - 'entityconnect add button'
+  - 'entityconnect edit button'
