--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.team.field_results_standings.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.team.field_results_standings.yml
@@ -11,7 +11,7 @@ id: node.team.field_results_standings
 field_name: field_results_standings
 entity_type: node
 bundle: team
-label: 'Ergebnisse / Tabelle'
+label: 'Ergebnisse / Tabelle externer Link'
 description: ''
 required: false
 translatable: false
