Kein zusätzlicher Titel für Kader

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.kader_2.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.kader_2.yml
@@ -376,7 +376,7 @@ display:
           admin_label: ''
           empty: false
           tokenize: true
-          content: '<h3>Kader der {{ title }}</h3>'
+          content: '<!--<h3>Kader der {{ title }}</h3>-->'
           plugin_id: text_custom
       footer: {  }
       empty: {  }
